--- a/springcloud/pom.xml
+++ b/springcloud/pom.xml
@@ -6,7 +6,7 @@
         <groupId>com.example</groupId>
         <artifactId>springboot-integration</artifactId>
         <version>1.0.0-SNAPSHOT</version>
-<!--        <relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;-->
+        <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <properties>
