--- a/springserver/src/main/resources/application.yml
+++ b/springserver/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 server:
   #服务端口
-  port: 8011
+  port: 8002
 
 spring:
   application:
-    name: client-01
+    name: server-01
 
 eureka:
   instance:
